--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "gulp-typescript": "^3.1.7",
     "gulp-uglify": "^3.0.0",
     "gulp-util": "^3.0.8",
+    "merge2": "^1.1.0",
     "run-sequence": "^2.0.0",
     "tape": "^4.7.0",
     "through2": "^2.0.3",
